--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "Asitha Rodrigo",
-  "license": "GPL-3.0"
+  "author": "Brad Traversy",
+  "license": "GPL"
 }
